<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FinalActivity">

    <TextView
        android:id="@+id/tV_final_text"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:justificationMode="inter_word"
        android:text="@string/str_final_message"
        app:layout_constraintBottom_toTopOf="@+id/iv_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/iv_qr_code"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/str_cd_qr_code"
        app:layout_constraintBottom_toTopOf="@+id/tV_thankyou_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_final_text"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tV_thankyou_message"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/str_thank_you_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_qr_code" />
</androidx.constraintlayout.widget.ConstraintLayout>